# ibvi-cli-rust

./: .env.example  .gitignore  Cargo.toml  ENRICHMENT_GUIDE.md  README.md  contributor_numbers.txt  run_diretrix_test.sh  start.chromedriver.sh  superREADME.md
examples/: diretrix_interactive.rs  diretrix_manual_test.rs  diretrix_test.rs
frontend/: EnrichmentScreen.tsx
src/: enrichment_service.rs  lib.rs  main.rs
src/dbase_scraper/: captcha_solver.rs  mod.rs  session_manager.rs
src/diretrix_enrichment/: mod.rs
src/diretrix_scraper/: README.md  mod.rs
src/scraper/: mod.rs
src/supabase/: mod.rs
tests/: scraper_integration_test.rs
