[package]
name = "iptu-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-rt = "2"
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls"] }
thirtyfour = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
rand = "0.8"
futures = "0.3.31"
# Pin base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"
scraper = "0.21"
regex = "1.10"
csv = "1.3"
thiserror = "1.0"
unicode-normalization = "0.1"
urlencoding = "2.1"
